@@ -30,6 +30,8 @@ Revision history for DBIx::Class
           due to badly-written handlers (the mechanism was never meant
           to be able to suppress exceptions)
         - Fixed rels ending with me breaking subqueried limit realiasing
+        - Fixed $rs->update/delete on resutsets constrained by an
+          -or condition
         - Remove rogue GROUP BY on non-multiplying prefetch-induced
           subqueries
         - Oracle sequence detection now *really* works across schemas
